--- a/styles.css
+++ b/styles.css
@@ -10,11 +10,14 @@ h1{
     font-family: "Silkscreen", sans-serif;
     margin: 0.2rem;
 }
+.container{
+    display: flex;
+}
 
 #container-div{
-    background-color: azure;
-    width: 600px;
-    height: 100vh;
+    background-color:gray;
+    width: 100%;
+    max-width: 600px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -25,7 +28,7 @@ h1{
 
 .button-div{
     display: flex;
-    justify-content: center;
+    flex-direction: column;
     margin: 1.2rem; 
     gap: 10px;
 }
@@ -35,7 +38,7 @@ h1{
     color: azure;
     padding:8px;
     border-radius: 8px;
-    font-size: 18px;
+    font-size: 14px;
     font-family: "Silkscreen", sans-serif;
 }
 
@@ -45,7 +48,7 @@ h1{
     color: black;
     padding:8px;
     border-radius: 8px;
-    font-size: 18px;
+    font-size: 14px;
 }
 .grid-square{
     width: 2rem;
@@ -53,4 +56,8 @@ h1{
     background-color: #abe4af;
     padding: 4px;
     margin: 2px;
+}
+
+.grid-number{
+    font-family: SilkScreen;
 }
